# discord-vcmp-client

./: CMakeLists.txt  README.md  pch.h
CMake [SleepyDiscord, Bot]/: CMakeLists.txt
bot/: CMakeLists.txt  discord-client.cpp  pch.h  sleepy-discord-client.cpp
bot/include/: Settings.h  SquirrelEvents.h  SquirrelFunctions.h  Utility.h  vcmpEvents.h
include/: SQImports.h  SquirrelEvents.h  Utility.h  sqconfig.h  squirrel.h  vcmpEvents.h
lib/dpp-10.0/: dpp32.lib
